--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-use-window-scroll": "^1.0.14",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
